# OpenGLViewer

./: CMakeLists.txt  README.md
data/shader/: model_phong_fragment_shader.glsl  model_phong_vertex_shader.glsl  vertexcolor_fragment_shader.glsl  vertexcolor_vertex_shader.glsl
src/: main.cpp
src/app/: GLViewController.cpp  GLViewController.h  GLViewer.cpp  GLViewer.h  GLWindow.cpp  GLWindow.h
src/dialogs/: DecimationDialog.cpp  DecimationDialog.h  SmoothDialog.cpp  SmoothDialog.h  SubdividerDialog.cpp  SubdividerDialog.h
src/dualquaternion/: dual_quaternion.cpp  dual_quaternion.h
src/io/: ObjReader.cpp  ObjReader.h
src/models/: Axes.cpp  Axes.h  IGeometry.h  Material.cpp  Material.h  MaterialBox.cpp  MaterialBox.h  model.cpp  model.h
src/scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Scene.cpp  Scene.h
src/transformations/: Animation.cpp  Animation.h  Arcball.cpp  Arcball.h  MeshManipulation.cpp  MeshManipulation.h
